--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -124,12 +124,12 @@ layout: default
     </div>
     <div style="font-size: 1.2em;" class="row">
       <div class="col-sm-6">	     
-      {%- for content in site.data.home.about.text.column1 -%}
+      {%- for content in site.data.home.about.text.columnA -%}
         <p>{{ content }}</p>
       {%- endfor -%}
       </div>
       <div class="col-sm-6">	     
-      {%- for content in site.data.home.about.text.column2 -%}
+      {%- for content in site.data.home.about.text.columnB -%}
         <p>{{ content }}</p>
       {%- endfor -%}
       </div>
