--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,7 @@ layout: default
 	<div>
 	  <h4>{{  site.data.home.features.one.subheading  }}</h4>
 	</div>
-	<img style="width: 100%; object-fit: cover; float: bottom; margin-top: 1em;" src="{{ site.data.home.features.one.subimage }}" alt="{{ site.data.home.features.one.sub-alt-text }}" />
+	<img style="width: 120%; object-fit: cover; margin-top: 1em; margin-left: -10%;" src="{{ site.data.home.features.one.subimage }}" alt="{{ site.data.home.features.one.sub-alt-text }}" />
       </div>
       <div class="col-md-6 text-center">
 	<img style="width: 120%; margin-left: -10%" src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
