--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ layout: default
     </div>
     
     <!-- Feature 2 -->
-    <div class="row">
+    <div class="row mb-3">
       <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	{%- for content in site.data.home.features.two.heading -%}
 	<h2>{{ content }}</h2>
@@ -71,10 +71,11 @@ layout: default
       </div>
       {%- endfor -%}
     </div>
-    <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%; padding: 2em 0;">
+	  
+    <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%;">
     
     <!-- Feature 3 -->
-    <div class="row">
+    <div class="row mt-3">
       <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	<h2>{{ site.data.home.features.three.heading }}</h2>
       </div>
