--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -67,7 +67,7 @@ layout: default
         <div>
 	  <h4>{{ feature.subheading }}</h4>
 	</div>
-	<img style="width: 100%" src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
+	<img style="width: 90%" class="" src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
       </div>
       {%- endfor -%}
     </div>
