--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,7 +56,7 @@ layout: default
     </div>
     
     <!-- Feature 2 -->
-    <div class="row mb-3">
+    <div class="row mb-5">
       <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	{%- for content in site.data.home.features.two.heading -%}
 	<h2>{{ content }}</h2>
@@ -75,7 +75,7 @@ layout: default
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%;">
     
     <!-- Feature 3 -->
-    <div class="row mt-3">
+    <div class="row mt-5">
       <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	<h2>{{ site.data.home.features.three.heading }}</h2>
       </div>
@@ -97,14 +97,14 @@ layout: default
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 text-center">
-        <img style="width: 100%" src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
+      <div class="col-md-6 text-center mt-5">
+        <img style="width: 120%; float: right;" src="{{ site.data.home.testimonial.image }}" alt="{{ site.data.home.testimonial.alt-text }}">
       </div>
       <div class="col-md-6 text-center">
         <div class="gradient-standout">   
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
-        <div class="mb-4">
+        <div class="mb-5">
           <h4>{{ site.data.home.testimonial.credentials }}</h4>  
         </div>
         <blockquote style="font-size: 1.2em">
