--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -9,36 +9,31 @@ header.masthead {
   background-size: cover;
   @include background-mobile;
   .image {
-      width: 50vw;
+    width: 120%;
     float: right;
     object-fit: cover;
-    margin-top: 6vw;
+    margin-top: 72px;
   }
   .intro-text {
-    margin-top: 6vw;
-    padding-top: 8vw;
-    padding-bottom: 6vw;
+    @include heading-font;
+    margin-top: 72px;
+    padding-top: 96px;
+    padding-bottom: 72px;
     .intro-title {
-      font-size: 3vw;
-      @include heading-font;
-      margin-bottom: 2vw;
+      font-size: 2.5em;
+      margin-bottom: 0.25em;
+      margin-top: 0.25em;
+      
     }
     .intro-lead-in {
-      font-size: 2.5vw;
-      line-height: 3vw;
-      margin-bottom: 2vw;
-      @include heading-font;
+      font-size: 1.8em;
     }
     .intro-heading {
-      font-size: 2vw;
-      font-weight: 500;
-      line-height: 2.5vw;
-      margin-bottom: 2vw;
-      @include heading-font;
+      font-size: 1.8em;
     }
   }
   .subheading {
-      padding: 0% 10%;
+    padding: 0% 10%;
   }
 }
 
