--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -45,9 +45,9 @@ h2 {
 }
 
 h4 {
-  font-size: 2vw;
+  font-size: 1.8rem;
   font-weight: 500;
-  line-height: 2.5vw;
+//   line-height: 2.5vw;
 }
 
 h1,
