--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -52,7 +52,7 @@ layout: default
       <div class="col-md-6 text-center">
 	<img style="width: 120%; margin-left: -10%" src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
       </div>
-      <img style="width: 100%" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
+      <img class="feature-image-break" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
     </div>
     
     <!-- Feature 2 -->
