--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -87,9 +87,8 @@ section {
 // Button Styles
 .btn, .btn-xl, .btn-sm {
   @include heading-font;
-  font-weight: 600;
-  font-size: 1.75vw;
-  padding: 1vw;
+  font-size: 1rem;
+  padding: 0.5rem;
 }
 
 /*
