--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,7 @@ layout: default
       <div class="col-md-6 text-center">
 	<div class="gradient-standout feature-heading">   
 	  {%- for content in site.data.home.features.one.heading -%}
-	  <h1 class="text-gradient text-uppercase">{{  content  }}</h1>
+	  <h1 class="text-gradient text-uppercase my-1">{{  content  }}</h1>
 	  {%- endfor -%}
 	</div>
 	<div>
@@ -93,7 +93,7 @@ layout: default
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center mb-4">
-	<h2 class="text-uppercase">{{ site.data.home.testimonial.section-heading }}</h2>
+	<h1 class="text-uppercase">{{ site.data.home.testimonial.section-heading }}</h1>
       </div>
     </div>
     <div class="row">
@@ -104,7 +104,7 @@ layout: default
         <div class="gradient-standout">   
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
-        <div class="mb-3">
+        <div style="font-size: 1.5rem;" class="mb-3">
 	  {%- for content in site.data.home.testimonial.credentials -%}
 	  <h4>{{ content }}</h4>  
 	  {%- endfor -%}
