--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -61,7 +61,7 @@ h6 {
 }
 
 section {
-  padding: 100px 0;
+  padding: 4em 0;
   h2.section-heading {
     font-size: 40px;
     margin-top: 0;
@@ -81,6 +81,21 @@ section {
   section {
     padding: 3em 0;
   }
+}
+
+
+// Medium and small screens
+@media(max-width:992px) {
+  html {
+    font-size: 9px;
+  }
+}
+
+
+// Phone size
+@media(max-width:576px) {
+  
+  
 }
 
 
