--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,15 +11,16 @@ layout: default
 <header class="masthead">
   <div class="container">
     <div class="row">
-	    <div class="col-sm-7 mx-auto">
+	    <div class="col-sm-6 mx-auto">
 	      <img class="image" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
 	    </div>
-	    <div class="col-sm-5 intro-text">
+	    <div class="col-sm-6 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
 		<div class="gradient-standout intro-title ">
 		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
 		</div>
 	      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
+	      <div class="col-lg-12 text-center subheading">{{ site.data.home.intro.description }}</div>
 	      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
 	    </div>
     </div>
