--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,10 +11,10 @@ layout: default
 <header class="masthead">
   <div class="container">
     <div class="row">
-	    <div class="col-sm-6 mx-auto">
+	    <div class="col-md-7 mx-auto">
 	      <img class="image" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
 	    </div>
-	    <div class="col-sm-6 intro-text">
+	    <div class="col-md-5 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
 		<div class="gradient-standout intro-title ">
 		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
