--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,10 +17,10 @@ layout: default
 	    <div class="col-md-5 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
 		<div class="gradient-standout intro-title ">
-		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
+		  <h1 class="text-gradient text-uppercase my-0">{{ site.data.home.intro.title }}</h1>
 		</div>
 	      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
-	      <div class="col-lg-12 text-center subheading">{{ site.data.home.intro.description }}</div>
+	      <div class="text-center subheading">{{ site.data.home.intro.description }}</div>
 	      <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn }}</a>
 	    </div>
     </div>
