--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,8 +16,8 @@ layout: default
 	    </div>
 	    <div class="col-md-5 intro-text">
 	      <div class="intro-lead-in">{{ site.data.home.intro.lead-in }}</div>
-		<div class="gradient-standout intro-title ">
-		  <h1 class="text-gradient text-uppercase my-0">{{ site.data.home.intro.title }}</h1>
+		<div class="gradient-standout intro-title my-0">
+		  <h1 class="text-gradient text-uppercase">{{ site.data.home.intro.title }}</h1>
 		</div>
 	      <div class="intro-heading">{{ site.data.home.intro.heading }}</div>
 	      <div class="text-center subheading">{{ site.data.home.intro.description }}</div>
