--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -8,17 +8,19 @@ header.masthead {
   background-position: center top;
   background-size: cover;
   @include background-mobile;
+  .nav-offset {
+    margin-top: 2em;
+  }
   .image {
     width: 120%;
     float: right;
     object-fit: cover;
-    margin-top: 72px;
+    margin-right: -10%;
   }
   .intro-text {
     @include heading-font;
-    margin-top: 72px;
-    padding-top: 96px;
-    padding-bottom: 72px;
+    margin-top: 2em;
+    padding: 0 1em;
     .intro-title {
       font-size: 2.5em;
       margin-bottom: 0.25em;
