--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: default
 <!-- Header -->
 <header class="masthead">
   <div class="container">
-    <div class="row">
+    <div class="row nav-offset">
 	    <div class="col-md-7 mx-auto">
 	      <img class="image" src="{{ site.data.home.intro.image }}" alt="{{ site.data.home.intro.alt-text }}"/>
 	    </div>
