--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -9,18 +9,18 @@ header.masthead {
   background-size: cover;
   @include background-mobile;
   .nav-offset {
-    margin-top: 2em;
+    margin-top: 6em;
   }
   .image {
-    width: 120%;
+    width: 110%;
     float: right;
     object-fit: cover;
-    margin-right: -10%;
+    margin-right: -5%;
   }
   .intro-text {
     @include heading-font;
-    margin-top: 2em;
-    padding: 0 1em;
+    margin-top: 1em;
+    padding: auto 0;
     .intro-title {
       font-size: 2.5em;
       margin-bottom: 0.25em;
