--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -83,11 +83,17 @@ section {
   }
 }
 
+// Medium and small screens
+@media(max-width:1200px) {
+  html {
+    font-size: 14px;
+  }
+}
 
 // Medium and small screens
-@media(max-width:992px) {
+@media(max-width:991px) {
   html {
-    font-size: 9px;
+    font-size: 10px;
   }
 }
 
