--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -31,6 +31,7 @@ header.masthead {
       font-size: 1.8em;
     }
     .intro-heading {
+      margin-top: 0.5em;
       font-size: 1.8em;
     }
   }
