--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -38,6 +38,8 @@ header.masthead {
   .subheading {
     font-size: 1.5em;
     margin-top: 1em;
+    margin-left: -5%;
+    margin-right: -5%
   }
 }
 
