--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,9 +26,7 @@ layout: default
     </div>
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
     <div class="row">
-      <div class="col-lg-12 text-center subheader">
-	<h4>{{ site.data.home.intro.description }}</h4>
-      </div>
+      <div class="cta text-left my-2">{{ site.data.home.intro.cta-text }}</div>
     </div>
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
   </div>
