--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -37,9 +37,12 @@ header.masthead {
   }
   .subheading {
     font-size: 1.5em;
-    margin-top: 1em;
+    margin-top: 0.5em;
     margin-left: -10%;
     margin-right: -5%
+  }
+  .cta {
+    font-size: 1.5em;
   }
 }
 
