--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,6 +150,29 @@
     <!-- Custom scripts for this template -->
     <script src="{{ assets_path }}js/agency.min.js"></script>
 
+    
+    <!-- The core Firebase JS SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
+
+    <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
+
+    <script>
+      // Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyCAzQ8EnCrnBWb6mvxCnC49F1NVdnyXrhE",
+        authDomain: "mw-landing-site.firebaseapp.com",
+        projectId: "mw-landing-site",
+        storageBucket: "mw-landing-site.appspot.com",
+        messagingSenderId: "143218941547",
+        appId: "1:143218941547:web:3dc9366a2b7f63ffd0db2e",
+        measurementId: "G-LFB9KJEXNV"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+    </script>
+    
   </body>
 
 </html>
