--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,19 +1,44 @@
 // Styling for the footer
 footer {
+  background-color: black;
   padding: 25px 0;
   text-align: center;
+  color: white;
+  @include heading-font;
   span.copyright {
     font-size: 90%;
     line-height: 40px;
     text-transform: none;
-    @include heading-font;
   }
   ul.quicklinks {
     font-size: 90%;
     line-height: 40px;
     margin-bottom: 0;
     text-transform: none;
-    @include heading-font;
+  }
+  .brand {
+    color: $primary;
+    &.active,
+    &:active,
+    &:focus,
+    &:hover {
+      color: darken($primary, 10%);
+    }
+  }
+    .navbar-nav {
+    .nav-item {
+      .nav-link {
+        font-size: 90%;
+        font-weight: 400;
+        padding: 0.75em 0;
+        letter-spacing: 1px;
+        @include heading-font;
+        &.active,
+        &:hover {
+          color: $primary;
+        }
+      }
+    }
   }
 }
 
@@ -29,10 +54,9 @@ ul.social-buttons {
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s;
-      color: white;
       border-radius: 100%;
       outline: none;
-      background-color: $gray-900;
+      background-color: white;
       &:active,
       &:focus,
       &:hover {
@@ -40,4 +64,98 @@ ul.social-buttons {
       }
     }
   }
+  
+  .form {
+    color: $gray-500;
+    background-color: white;
+    
+    .form-button {
+      background-color: $moreBlue;
+      padding: 0.5em 1em;
+    }
+  }
+  
+  .alert {
+    padding: 1em;
+    display: None;
+  }
+  
 }
+
+/*
+copy pasta Nav style into here to copy theme
+
+// Styling for the navbar
+#mainNav {
+  background-color: black; // $gray-900;
+  .navbar-toggler {
+    font-size: 12px;
+    right: 0;
+    padding: 13px;
+    text-transform: uppercase;
+    color: white;
+    border: 0;
+    background-color: $primary;
+    @include heading-font;
+  }
+  .navbar-brand {
+    color: $primary;
+    //@include script-font;
+    &.active,
+    &:active,
+    &:focus,
+    &:hover {
+      color: darken($primary, 10%);
+    }
+  }
+  .navbar-nav {
+    .nav-item {
+      .nav-link {
+        font-size: 90%;
+        font-weight: 400;
+        padding: 0.75em 0;
+        letter-spacing: 1px;
+        color: white;
+        @include heading-font;
+        &.active,
+        &:hover {
+          color: $primary;
+        }
+      }
+    }
+  }
+}
+@media(min-width:992px) {
+  #mainNav {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    -webkit-transition: padding-top 0.3s, padding-bottom 0.3s;
+    -moz-transition: padding-top 0.3s, padding-bottom 0.3s;
+    transition: padding-top 0.3s, padding-bottom 0.3s;
+    border: none;
+    // background-color: transparent;
+    .navbar-brand {
+      font-size: 1.75em;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          padding: 1.1em 1em !important;
+        }
+      }
+    }
+    &.navbar-shrink {
+      padding-top: 0;
+      padding-bottom: 0;
+      background-color: $gray-900;
+      .navbar-brand {
+        font-size: 1.25em;
+        padding: 12px 0;
+      }
+    }
+  }
+}
+*/
