--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -184,6 +184,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-analytics.js"></script>
     
+    <!-- Firebase form functionality -->
+    <script src="{{ assets_path }}js/saveToFirebase.js"></script>
     
   </body>
 
