--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,18 +3,19 @@ footer {
   background-color: black;
   padding: 25px 0;
   text-align: center;
-  color: white;
   @include heading-font;
   span.copyright {
     font-size: 90%;
     line-height: 40px;
     text-transform: none;
+    color: white;
   }
   ul.quicklinks {
     font-size: 90%;
     line-height: 40px;
     margin-bottom: 0;
     text-transform: none;
+    color: white;
   }
   .brand {
     color: $primary;
@@ -25,12 +26,18 @@ footer {
       color: darken($primary, 10%);
     }
   }
-    .navbar-nav {
+  .cta {
+    margin: 1rem 2rem;
+    color: white;
+  }
+  .navbar-nav {
     .nav-item {
       .nav-link {
+        color: white;
+        text-transform: uppercase;
         font-size: 90%;
         font-weight: 400;
-        padding: 0.75em 0;
+        padding: 0.5em 10%;
         letter-spacing: 1px;
         @include heading-font;
         &.active,
@@ -39,6 +46,20 @@ footer {
         }
       }
     }
+  } 
+  .form {
+    color: $gray-500;
+    background-color: white;
+    text-transform: uppercase;
+    .form-button {
+      background-color: $moreBlue;
+      padding: 0.5em 1em;
+      width: 28%;
+    }
+  }
+  .alert {
+    padding: 1em;
+    display: None;
   }
 }
 
@@ -64,22 +85,6 @@ ul.social-buttons {
       }
     }
   }
-  
-  .form {
-    color: $gray-500;
-    background-color: white;
-    
-    .form-button {
-      background-color: $moreBlue;
-      padding: 0.5em 1em;
-    }
-  }
-  
-  .alert {
-    padding: 1em;
-    display: None;
-  }
-  
 }
 
 /*
