--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -8,14 +8,14 @@ footer {
     font-size: 90%;
     line-height: 40px;
     text-transform: none;
-    color: white;
+    color: $gray-100;
   }
   ul.quicklinks {
     font-size: 90%;
     line-height: 40px;
     margin-bottom: 0;
     text-transform: none;
-    color: white;
+    color: $gray-100;
   }
   .brand {
     color: $primary;
@@ -28,12 +28,12 @@ footer {
   }
   .cta {
     margin: 1rem 2rem;
-    color: white;
+    color: $gray-100;
   }
   .navbar-nav {
     .nav-item {
       .nav-link {
-        color: white;
+        color: $gray-100;
         text-transform: uppercase;
         font-size: 90%;
         font-weight: 400;
@@ -48,13 +48,19 @@ footer {
     }
   } 
   .form {
-    color: $gray-500;
-    background-color: white;
-    text-transform: uppercase;
-    .form-button {
-      background-color: $moreBlue;
+    .text-input {
+      width: 70%;
+      text-transform: uppercase;
       padding: 0.5em 1em;
-      width: 28%;
+      background-color: white;
+      color: $gray-500;
+    }
+    .form-button {
+      background-color: #a5cae2;
+      padding: 0.5em 1em;
+      width: 30%;
+      text-transform: uppercase;
+      color: $gray-500;
     }
   }
   .alert {
