--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
             <div class="cta">{{ site.data.default.footer.cta-text }}</div>
             <div>
               <form id="footer-email-form" class="form text-uppercase">
-                <input type="text" id="email" name="email" placeholder="email address">
+                <input type="text" id="email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
                 <button class="form-button" type="submit">{{ site.data.default.footer.button }}</button>
               </form>
             </div>
@@ -126,7 +126,7 @@
     {%- if page.layout == 'home' -%}
     <!-- Portfolio Modals -->
     {%- for project in site.projects -%}
-{% assign ws = '' %}
+    {% assign ws = '' %}
 
     <!-- Modal {{ project.id | replace: '/projects/', '' }} -->
     <div class="portfolio-modal modal fade" id="portfolioModal{{ project.id | replace: '/projects/', '' }}" tabindex="-1" role="dialog" aria-hidden="true">
