--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
             <div class="alert">{{ site.data.default.footer.form-alert }}</div>
           </div>
         
-          <div class="col-md-6">
+          <div class="col-md-6 mt-3">
             <ul class="navbar-nav text-uppercase">
               {%- for link in site.data.default.nav -%}
               {% assign ws = '' %}
