--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -59,7 +59,6 @@ footer {
       padding: 0.5em 1em;
       width: 30%;
       text-transform: uppercase;
-      color: $gray-500;
     }
   }
   .alert {
@@ -72,11 +71,11 @@ ul.social-buttons {
   margin-bottom: 0;
   li {
     a {
-      font-size: 24px;
-      line-height: 40px;
+      font-size: 1.5em;
+      line-height: 2.5em;
       display: block;
-      width: 40px;
-      height: 40px;
+      width: 2.5em;
+      height: 2.5em;
       -webkit-transition: all 0.3s;
       -moz-transition: all 0.3s;
       transition: all 0.3s;
