--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -85,7 +85,7 @@ layout: default
       <div class="col-lg-12 text-center">
 	<h4>{{ site.data.home.features.three.text }}</h4>
 	<h4>{{ site.data.home.features.three.text-next }}</h4>
-	<img class="my-3" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
+	<img style="width: 100%" class="my-3" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
 	<h4>{{ site.data.home.features.three.image-detail }}</h4>
       </div>
     </div>		 
