--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,13 +41,13 @@ layout: default
     <!-- Feature 1 -->	  
     <div class="row">
       <div class="col-md-6 text-center">
-	<div class="gradient-standout feature-heading">   
-	  {%- for content in site.data.home.features.one.heading -%}
-	  <h1 class="text-gradient text-uppercase my-1">{{  content  }}</h1>
-	  {%- endfor -%}
+	<div class="gradient-standout feature-heading">
+	  <h1 class="text-gradient text-uppercase my-1">{{  content  }}</h1> 
 	</div>
 	<div>
-	  <h4>{{  site.data.home.features.one.subheading  }}</h4>
+	  {%- for content in site.data.home.features.one.subheading -%}
+	  <p>{{  site.data.home.features.one.subheading  }}</p>
+	  {%- endfor -%}
 	</div>
 	</div>
       <div class="col-md-6 text-center">
@@ -64,12 +64,12 @@ layout: default
 	{%- endfor -%}
       </div>
       <div class="margin: 3em 2em;">
-	<h4>{{ site.data.home.features.two.description }}</h4>
+	<p>{{ site.data.home.features.two.description }}</p>
       </div>
       {%- for feature in site.data.home.features.two.feature -%}
       <div class="col-md-6 text-center">
         <div>
-	  <h4>{{ feature.subheading }}</h4>
+	  <p>{{ feature.subheading }}</p>
 	</div>
 	<img style="width: 100%" class="" src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
       </div>
@@ -84,10 +84,10 @@ layout: default
 	<h1>{{ site.data.home.features.three.heading }}</h1>
       </div>
       <div class="col-lg-12 text-center">
-	<h4>{{ site.data.home.features.three.text }}</h4>
-	<h4>{{ site.data.home.features.three.text-next }}</h4>
+	<p>{{ site.data.home.features.three.text }}</p>
+	<p>{{ site.data.home.features.three.text-next }}</p>
 	<img style="width: 100%" class="my-3" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
-	<h4>{{ site.data.home.features.three.image-detail }}</h4>
+	<p>{{ site.data.home.features.three.image-detail }}</p>
       </div>
     </div>		 
   </div>
@@ -112,7 +112,7 @@ layout: default
         </div>
         <div style="font-size: 1.5rem;" class="mb-3">
 	  {%- for content in site.data.home.testimonial.credentials -%}
-	  <h4>{{ content }}</h4>  
+	  <h5>{{ content }}</h5>  
 	  {%- endfor -%}
         </div>
         <blockquote style="font-size: 1.2em">
