--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,11 +42,11 @@ layout: default
     <div class="row">
       <div class="col-md-6 text-center">
 	<div class="gradient-standout feature-heading">
-	  <h1 class="text-gradient text-uppercase my-1">{{  content  }}</h1> 
+	  <h1 class="text-gradient text-uppercase my-1">{{  site.data.home.features.one.heading  }}</h1> 
 	</div>
 	<div>
 	  {%- for content in site.data.home.features.one.subheading -%}
-	  <p>{{  site.data.home.features.one.subheading  }}</p>
+	  <p>{{  content  }}</p>
 	  {%- endfor -%}
 	</div>
 	</div>
@@ -63,13 +63,13 @@ layout: default
 	<h1>{{ content }}</h1>
 	{%- endfor -%}
       </div>
-      <div class="margin: 3em 2em;">
+      <div class="px-3">
 	<p>{{ site.data.home.features.two.description }}</p>
       </div>
       {%- for feature in site.data.home.features.two.feature -%}
       <div class="col-md-6 text-center">
         <div>
-	  <p>{{ feature.subheading }}</p>
+	  <h4>{{ feature.subheading }}</h4>
 	</div>
 	<img style="width: 100%" class="" src="{{ feature.image }}" alt="{{ feature.alt-text }}"/>
       </div>
@@ -83,7 +83,7 @@ layout: default
       <div class="col-lg-12 text-center feature-heading font-weight-bold">
 	<h1>{{ site.data.home.features.three.heading }}</h1>
       </div>
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12">
 	<p>{{ site.data.home.features.three.text }}</p>
 	<p>{{ site.data.home.features.three.text-next }}</p>
 	<img style="width: 100%" class="my-3" src="{{ site.data.home.features.three.image }}" alt="{{ site.data.home.features.three.alt-text }}"/>
@@ -110,13 +110,14 @@ layout: default
         <div class="gradient-standout">   
           <h1 class="text-gradient text-uppercase">{{ site.data.home.testimonial.heading }}</h1>
         </div>
-        <div style="font-size: 1.5rem;" class="mb-3">
+        <div class="mb-3 text-bold">
 	  {%- for content in site.data.home.testimonial.credentials -%}
 	  <h5>{{ content }}</h5>  
 	  {%- endfor -%}
         </div>
-        <blockquote style="font-size: 1.2em">
+        <blockquote>
           <p>{{ site.data.home.testimonial.text }}</p>
+	  <p>His experience follows...</p>
         </blockquote> 
       </div>
     </div>	
