--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -35,13 +35,13 @@ header.masthead {
     }
   }
   .subheading {
-    font-size: 1.5em;
+    font-size: 1.2em;
     margin-top: 0.5em;
-    margin-left: -10%;
-    margin-right: -5%
+    margin-left: -12px;
+    margin-right: -12px;
   }
   .cta {
-    font-size: 1.5em;
+    font-size: 1.2em;
   }
 }
 
