--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -132,7 +132,7 @@ layout: default
 	<img style="width: 100%" src="{{ site.data.home.about.image }}" alt="{{ site.data.home.about.alt-text }}"/>
       </div>
     </div>
-    <div style="font-size: 1.2em;" class="row">
+    <div class="row">
       <div style="margins: 4em 2em;" class="col-md-12">
 	{%- for content in site.data.home.about.body -%}
 	   <p>{{ content }}</p>  
