--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,8 +40,8 @@ layout: default
   <div class="container">
     <!-- Feature 1 -->	  
     <div class="row">
-      <div class="col-md-6 text-center">
-	<div class="gradient-standout feature-heading">
+      <div class="col-md-6">
+	<div class="gradient-standout text-center feature-heading">
 	  <h1 class="text-gradient text-uppercase my-1">{{  site.data.home.features.one.heading  }}</h1> 
 	</div>
 	<div>
