--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -1,5 +1,6 @@
 // Styling for the masthead
 header.masthead {
+  background-image: linear-gradient(to bottom right, $moreBlue, $lessBlue);
   text-align: center;
   color: black;
   //background-image: url('../img/hero.png');
