--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -117,7 +117,7 @@ layout: default
 	  {%- endfor -%}
         </div>
         <blockquote>
-          <p>{{ site.data.home.testimonial.text }}</p>
+          <p sty;e="text-indent: 0px">{{ site.data.home.testimonial.text }}</p>
         </blockquote> 
       </div>
     </div>	
