--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@ layout: default
     
     <!-- Feature 2 -->
     <div class="row mb-5">
-      <div class="col-lg-12 text-center feature-heading font-weight-bold">
+      <div class="col-lg-12 text-center feature-heading text-capitalize font-weight-bold">
 	{%- for content in site.data.home.features.two.heading -%}
 	<h1>{{ content }}</h1>
 	{%- endfor -%}
