--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
             <div class="cta">{{ site.data.default.footer.cta-text }}</div>
             <div>
               <form id="footer-email-form" class="form text-uppercase">
-                <input type="text" id="email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
+                <input type="email" id="email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
                 <button class="form-button" type="submit">{{ site.data.default.footer.button }}</button>
               </form>
             </div>
