--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,9 +26,9 @@ layout: default
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
     <div class="row">
       <div class="col-md-12 cta text-left my-2">{{ site.data.home.intro.cta-text }}</div>
-      <div>
+      <div class="text-center">
 	<form id="header-email-form" class="form text-uppercase">
-          <input type="email" id="email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
+          <input type="email" id="email" name="email" placeholder="Email address" class="text-input" style="width: 300px;">
 	  <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
 	  <a class="mt-1 btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn2 }}</a>
 	</form>
