--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
       <div class="col-md-12 cta text-left my-2">{{ site.data.home.intro.cta-text }}</div>
       <div class="mx-auto mt-3">
 	<form id="header-email-form" class="form text-uppercase">
-          <input type="email" id="email" name="email" placeholder="Email address" class="text-input btn" style="width: 300px; background-color: #e2e2e2;">
+          <input type="email" id="email" name="email" placeholder="Email address" class="text-input btn" style="width: 300px; background-color: #e2e2e2; outline: auto;">
           <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
 	  <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn2 }}</a>
 	</form>
