--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,7 +55,7 @@ layout: default
 	</div>
 	</div>
       <div class="col-md-6 text-center">
-	<img style="width: 100%;" src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
+	<img style="width: 100%; margin-top: -8%;" src="{{ site.data.home.features.one.image }}" alt="{{ site.data.home.features.one.alt-text }}" />
       </div>
       <img class="feature-image-break" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
     </div>
