--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,11 +81,11 @@
             <div class="cta">{{ site.data.default.footer.cta-text }}</div>
             <div>
               <form id="footer-email-form" class="form text-uppercase">
-                <input type="email" id="email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
+                <input type="email" id="footer-email" name="email" placeholder="EMAIL ADDRESS" class="text-input">
                 <button class="form-button" type="submit">{{ site.data.default.footer.button }}</button>
               </form>
             </div>
-            <div class="alert">{{ site.data.default.footer.form-alert }}</div>
+            <div id="footer-alert" class="alert">{{ site.data.default.footer.form-alert }}</div>
           </div>
         
           <div class="col-md-6 mt-3">
