--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
           <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
 	  <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn2 }}</a>
 	</form>
-	<div class="header-alert">{{ site.data.default.footer.form-alert }}</div>
+	<div id="header-alert" class="alert">{{ site.data.default.footer.form-alert }}</div>
       </div>
     </div>
     <hr style="border-top: 3px solid #bbb; border-radius: 5px; width: 30%">
@@ -138,7 +138,7 @@ layout: default
           <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
 	  <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn2 }}</a>
 	</form>
-	<div class="cta-section-alert">{{ site.data.default.footer.form-alert }}</div>
+	<div id="cta-section-alert" class="alert">{{ site.data.default.footer.form-alert }}</div>
       </div>
     </div>
   </div>
