--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -132,11 +132,12 @@ layout: default
 <section id="cta-section">
   <div class="container">
     <div class="row">
+      <div>{{ site.data.home.cta-section.heading }}</div>
+      <div>{{ site.data.home.cta-section.cta }}</div>
       <div class="mx-auto">
 	<form id="cta-section-email-form" class="form text-uppercase">
           <input type="email" id="cta-section-email" name="email" placeholder="Email address" class="text-input btn" style="width: 300px; background-color: #e2e2e2; outline: auto;">
           <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
-	  <a class="btn btn-primary btn-xl btn-sm text-uppercase js-scroll-trigger" href="#features">{{ site.data.home.intro.btn2 }}</a>
 	</form>
 	<div id="cta-section-alert" class="alert">{{ site.data.default.footer.form-alert }}</div>
       </div>
