--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -129,7 +129,7 @@ layout: default
 </section>
 
 <!-- CTA -->
-<section id="cta-section">
+<img class="feature-image-break" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
   <div class="container">
     <div class="row row-reverse">
       <div class="col-md-6">
@@ -148,7 +148,6 @@ layout: default
       </div>
     </div>
   </div>
-</section>
 
 <!-- About -->
 <section id="about">
