--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -133,9 +133,9 @@ layout: default
   <div class="container">
     <div class="row row-reverse">
       <div class="col-md-6">
-	      <div>{{ site.data.home.cta-section.heading }}</div>
-	      <div>{{ site.data.home.cta-section.cta }}</div>
-	      <div class="mx-auto">
+	      <h5>{{ site.data.home.cta-section.heading }}</h5>
+	      <h5>{{ site.data.home.cta-section.cta }}</h5>
+	      <div>
 		<form id="cta-section-email-form" class="form text-uppercase">
 		  <input type="email" id="cta-section-email" name="email" placeholder="Email address" class="text-input btn" style="width: 300px; background-color: #e2e2e2; outline: auto;">
 		  <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
