--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -131,11 +131,11 @@ layout: default
 <!-- CTA -->
 <img class="feature-image-break" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
   <div class="container">
-    <div class="row row-reverse">
+    <div class="row">
       <div class="col-md-6">
 	      <h5>{{ site.data.home.cta-section.heading }}</h5>
 	      <h5>{{ site.data.home.cta-section.cta }}</h5>
-	      <div>
+	      <div class="text-center">
 		<form id="cta-section-email-form" class="form text-uppercase">
 		  <input type="email" id="cta-section-email" name="email" placeholder="Email address" class="text-input btn" style="width: 300px; background-color: #e2e2e2; outline: auto;">
 		  <button class="btn btn-primary btn-xl btn-sm text-uppercase" type="submit">{{ site.data.home.intro.btn }}</button>
