--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -132,7 +132,7 @@ layout: default
 <img class="feature-image-break" src="{{ site.data.home.features.transition.image }}" alt="{{ site.data.home.features.transition.alt-text }}" />
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 my-auto">
 	      <h5>{{ site.data.home.cta-section.heading }}</h5>
 	      <h5>{{ site.data.home.cta-section.cta }}</h5>
 	      <div class="text-center">
